--- a/style/style.css
+++ b/style/style.css
@@ -30,7 +30,7 @@ div {
 header.main-header{
     position: fixed;
     top: 0;
-    width: 100%;
+    width: 90%;
     z-index: 9999;
 }
    
@@ -172,9 +172,9 @@ li.menu-item a:hover{
 
 .form-register{
     position: absolute;
-    width: 400px;
+    width: 26%;
     background: #000000;
-    padding: 30px;
+    padding: 2%;
     padding-bottom: 65px;
     left: 35%;
     top: 25%;
@@ -231,9 +231,7 @@ li.menu-item a:hover{
 
 .botons-reset{
     position: relative;
-    left: 20%;
-    bottom: 5%;
-    width: 25%;
+    width: 100%;
     background: #ff0000;
     border: none;
     padding: 10px;
