añadido first letter

--- a/style/style.css
+++ b/style/style.css
@@ -188,6 +188,11 @@ li.menu-item a:hover{
     font-size: 22px;
     margin-bottom: 20px;
 }
+
+h4::first-letter{
+    font-size: 2rem; 
+    color: #d90b0b;
+}
   
 .controls{
     width: 95%;
