añadio nth-child

--- a/style/style.css
+++ b/style/style.css
@@ -274,6 +274,13 @@ h4::first-line{
     top: 20%;
 }
 
+th:nth-child(odd){
+    background-color: #222121;
+    
+}
+
+
+
 table.steelBlueCols{
     border: 4px solid #700404;
     background-color: #222121;
