pseudoclase nth-type

--- a/style/style.css
+++ b/style/style.css
@@ -92,6 +92,9 @@ li.menu-item a:hover{
     position: relative;
     float: left;
 }
+ul:nth-last-of-type(1){
+    background-color: #423e3e84;
+}
 
 .main-caption {
     top: 0;
